Bug 1855204 - Fix message list header bar overflow. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D189222

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -131,6 +131,7 @@ body {
   min-width: 300px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 #messagePaneSplitter {
